--- a/assets/styles/styles.index.css
+++ b/assets/styles/styles.index.css
@@ -72,7 +72,7 @@ footer a {
 
 .navbar a {
     font-size: 1.2rem;
-    color: var(--text-color);
+    color: white;
     margin-left: 4rem;
     font-weight: 500;
     transition: 0.3s ease;
@@ -80,9 +80,10 @@ footer a {
     border-radius: 3px;
 }
 
-.navbar a:hover,
-.navbar a.active {
-    color: var(--main-color);
-    border-bottom: 3px solid var(--main-color);
+.navbar a:hover {
+    color: rgb(0, 0, 0);
+    border-bottom: 3px solid white;
+    transform: scale(1.1);
 }
+
 
